# 3d-course-work-linux

./: .gitignore  3d-course-work-win32.sln  3d-course-work-win32.vcxproj  3d-course-work-win32.vcxproj.filters  Axis.cpp  Axis.h  CMakeLists.txt  Camera.cpp  Camera.hpp  EBO.cpp  EBO.h  Flame.cpp  Flame.h  Main.cpp  Matrix.hpp  Mesh.cpp  Mesh.h  Model.h  OBJLoader.h  Raycast.h  Texture.cpp  Texture.h  Util.cpp  Util.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  default.frag  default.vert  glad.c  shaderClass.cpp  shaderClass.h  shell.nix
.direnv/: nix-profile-26.05-m6ji2a8jp7w4ck7v  nix-profile-26.05-m6ji2a8jp7w4ck7v.rc
.github/: README.md
Resources/Models/: jet3.mtl
Resources/Scenes/: scene.scn
Resources/Shaders/: axis.vert  default.frag  default.vert  flame.frag  flame.vert  outlining.vert
include/: glfw3.lib
include/glad/: glad.h
include/stb/: stb_image_write.h
x64/: imgui.ini
